--- a/PhoneScoutAdmin/Views/Home.xaml
+++ b/PhoneScoutAdmin/Views/Home.xaml
@@ -1,13 +1,75 @@
 ﻿<Window x:Class="PhoneScoutAdmin.Home"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PhoneScoutAdmin"
-        mc:Ignorable="d"
+        xmlns:vm="clr-namespace:PhoneScoutAdmin.ViewModels"
+        xmlns:views="clr-namespace:PhoneScoutAdmin.Views"
         Title="Home" Height="750" Width="1300"
         Background="White">
+    <Window.Resources>
+    <!-- Phone -->
+    <DataTemplate DataType="{x:Type vm:PhoneViewModel}">
+        <views:PhoneView/>
+    </DataTemplate>
 
+    <!-- Manufacturer -->
+    <DataTemplate DataType="{x:Type vm:ManufacturerViewModel}">
+        <views:ManufacturerView/>
+    </DataTemplate>
+
+    <!-- User -->
+    <DataTemplate DataType="{x:Type vm:UserViewModel}">
+        <views:UserView/>
+    </DataTemplate>
+
+    <!-- Storage -->
+    <DataTemplate DataType="{x:Type vm:StorageViewModel}">
+        <views:StorageView/>
+    </DataTemplate>
+
+    <!-- Repair -->
+    <DataTemplate DataType="{x:Type vm:RepairViewModel}">
+        <views:RepairView/>
+    </DataTemplate>
+
+    <!-- Order -->
+    <DataTemplate DataType="{x:Type vm:OrderViewModel}">
+        <views:OrderView/>
+    </DataTemplate>
+
+
+
+    <DataTemplate DataType="{x:Type vm:SingleManufacturerViewModel}">
+        <ContentControl>
+            <ContentControl.Style>
+                <Style TargetType="ContentControl">
+                    <Setter Property="Content"
+                Value="{Binding}" />
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding IsPhoneView}" Value="True">
+                            <Setter Property="ContentTemplate">
+                                <Setter.Value>
+                                    <DataTemplate>
+                                        <views:PhoneView/>
+                                    </DataTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </DataTrigger>
+
+                        <DataTrigger Binding="{Binding IsManufacturerView}" Value="True">
+                            <Setter Property="ContentTemplate">
+                                <Setter.Value>
+                                    <DataTemplate>
+                                        <views:ManufacturerView/>
+                                    </DataTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </ContentControl.Style>
+        </ContentControl>
+    </DataTemplate>
+    </Window.Resources>
     <DockPanel>
 
         <!-- MENU -->
