--- a/PhoneScoutAdmin/Views/RepairView.xaml
+++ b/PhoneScoutAdmin/Views/RepairView.xaml
@@ -108,35 +108,122 @@
                     </Grid.ColumnDefinitions>
 
                     <!-- PRICE -->
-                    <TextBlock Grid.Row="0" Text="Price:" FontSize="16"/>
+                    <StackPanel Grid.Row="0"
+       Grid.Column="0"
+       Orientation="Horizontal"
+       VerticalAlignment="Center">
+
+
+
+                        <TextBlock Text="ℹ"
+          FontSize="16"
+Foreground="#2300B3"
+          Cursor="Hand"
+          VerticalAlignment="Center" ToolTipService.InitialShowDelay="500">
+
+                            <TextBlock.ToolTip>
+                                <ToolTip>
+                                    Displays the price of the selected repair.
+                                </ToolTip>
+                            </TextBlock.ToolTip>
+
+                        </TextBlock>
+                        <TextBlock Text="Price:"
+          Margin="5,5,2,5"
+          FontSize="16"
+          VerticalAlignment="Center"/>
+                    </StackPanel>
+
+
                     <TextBox Grid.Row="0"
                              Grid.Column="1"
                              Width="180"
+                             Margin="5"
                              Text="{Binding Price, UpdateSourceTrigger=PropertyChanged}" />
+                    
+                    
+                    
+                    
 
                     <!-- STATUS (FIXED LIKE ORDER) -->
-                    <TextBlock Grid.Row="1" Text="Status:" FontSize="16"/>
+                    <StackPanel Grid.Row="1"
+       Grid.Column="0"
+       Orientation="Horizontal"
+       VerticalAlignment="Center">
+
+
+
+                        <TextBlock Text="ℹ"
+          FontSize="16"
+Foreground="#2300B3"
+          Cursor="Hand"
+          VerticalAlignment="Center" ToolTipService.InitialShowDelay="500">
+
+                            <TextBlock.ToolTip>
+                                <ToolTip>
+                                    Displays the status of the selected repair.
+                                </ToolTip>
+                            </TextBlock.ToolTip>
+
+                        </TextBlock>
+                        <TextBlock Text="Status:"
+          Margin="5,5,2,5"
+          FontSize="16"
+          VerticalAlignment="Center"/>
+                    </StackPanel>
                     <ComboBox Grid.Row="1"
                               Grid.Column="1"
                               Width="180"
+                              Margin="5"
                               ItemsSource="{Binding Statuses}"
                               DisplayMemberPath="statusName"
                               SelectedValuePath="statusCode"
                               SelectedValue="{Binding SelectedRepair.status, Mode=TwoWay}"/>
 
                     <!-- ADD PART -->
-                    <TextBlock Grid.Row="2" Text="Parts:" FontSize="16"/>
+                    <StackPanel Grid.Row="2" Grid.RowSpan="2"
+       Grid.Column="0"
+       Orientation="Horizontal"
+       VerticalAlignment="Center">
+
+
+
+                        <TextBlock Text="ℹ"
+          FontSize="16"
+Foreground="#2300B3"
+          Cursor="Hand"
+          VerticalAlignment="Center" ToolTipService.InitialShowDelay="500">
+
+                            <TextBlock.ToolTip>
+                                <ToolTip>
+                                    Displays the parts required for the selected repair.
+                                </ToolTip>
+                            </TextBlock.ToolTip>
+
+                        </TextBlock>
+                        <TextBlock Text="Parts:"
+          Margin="5,5,2,5"
+          FontSize="16"
+          VerticalAlignment="Center"/>
+                    </StackPanel>
                     <StackPanel Grid.Row="2"
                                 Grid.Column="1"
-                                Orientation="Horizontal">
+                                Orientation="Horizontal" Margin="5" HorizontalAlignment="Center">
+                       
 
                         <TextBox Width="145"
                                  Text="{Binding NewPart, UpdateSourceTrigger=PropertyChanged}" />
 
-                        <Button Content="Add"
-                                Width="30"
-                                Margin="5,0,0,0"
-                                Command="{Binding AddPartCommand}" />
+
+
+                        <Button
+
+Margin="5,0,0,0"
+Content="Add"
+BorderBrush="#2300B3"
+BorderThickness="2"
+Background="WhiteSmoke"
+Command="{Binding AddPartCommand}" />
                     </StackPanel>
 
                     <!-- PARTS LIST -->
@@ -162,22 +249,31 @@
 
                     <!-- SAVE -->
                     <Button Grid.Row="4"
-                            Grid.ColumnSpan="2"
-                            Content="Save"
-                            Margin="10"
-                            FontSize="18"
-                            Command="{Binding SaveRepairCommand}" />
+        Grid.ColumnSpan="2"
+        Margin="10"
+        Padding="6"
+        FontSize="16"
+        Content="Save changes"
+        BorderBrush="#68F145"
+        BorderThickness="3"
+        Background="WhiteSmoke"
+        Command="{Binding SaveRepairCommand}" />
+                    
                 </Grid>
             </GroupBox>
         </StackPanel>
 
         <!-- DELETE -->
         <Button Grid.Row="1"
-                Grid.ColumnSpan="2"
-                Width="200"
-                Margin="10"
-                FontSize="18"
-                Content="Delete repair"
-                Command="{Binding DeleteRepairCommand}" />
+                Grid.ColumnSpan="2" Width="200"
+         Margin="10"
+         FontSize="16"
+         Content="Delete phone"
+         BorderBrush="Red"
+         BorderThickness="3"
+         Background="WhiteSmoke"
+         Command="{Binding DeleteRepairCommand}" />
+
+        
     </Grid>
 </UserControl>
